--- a/data.ipynb
+++ b/data.ipynb
@@ -10,12 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 116,
    "id": "9a0504d4-f359-4414-930b-31b5c79e3cc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -28,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 117,
    "id": "2a8f5de6-173d-4f99-8185-871c9663b62f",
    "metadata": {},
    "outputs": [],
@@ -46,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 118,
    "id": "616872ff-2023-449b-b446-c45f154118d7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 119,
    "id": "35f8a4e3-a21a-4028-b2bc-c4905a6811a2",
    "metadata": {},
    "outputs": [
@@ -447,7 +452,7 @@
        "[1812 rows x 104 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 120,
    "id": "2377abca-c9a9-4683-bc8e-429b4ccce292",
    "metadata": {},
    "outputs": [],
@@ -475,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 121,
    "id": "2686a2ac-4948-427f-8303-abf4d57d272a",
    "metadata": {},
    "outputs": [
@@ -500,29 +505,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>BTC / Price, USD</th>\n",
+       "      <th>ETH / Price, USD</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1228.459651</td>\n",
+       "      <td>17.265684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1262.931467</td>\n",
+       "      <td>19.204561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1289.363191</td>\n",
+       "      <td>19.654703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1268.940664</td>\n",
+       "      <td>18.684225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1276.273683</td>\n",
+       "      <td>19.301111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -530,23 +535,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1807</th>\n",
-       "      <td>43614.342696</td>\n",
+       "      <td>3080.565482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1808</th>\n",
-       "      <td>42357.321742</td>\n",
+       "      <td>2924.080468</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1809</th>\n",
-       "      <td>42173.459396</td>\n",
+       "      <td>2910.836175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1810</th>\n",
-       "      <td>42195.594745</td>\n",
+       "      <td>2880.696526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1811</th>\n",
-       "      <td>42646.161859</td>\n",
+       "      <td>2936.298260</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -554,35 +559,243 @@
        "</div>"
       ],
       "text/plain": [
-       "      BTC / Price, USD\n",
-       "0          1228.459651\n",
-       "1          1262.931467\n",
-       "2          1289.363191\n",
-       "3          1268.940664\n",
-       "4          1276.273683\n",
+       "      ETH / Price, USD\n",
+       "0            17.265684\n",
+       "1            19.204561\n",
+       "2            19.654703\n",
+       "3            18.684225\n",
+       "4            19.301111\n",
        "...                ...\n",
-       "1807      43614.342696\n",
-       "1808      42357.321742\n",
-       "1809      42173.459396\n",
-       "1810      42195.594745\n",
-       "1811      42646.161859\n",
+       "1807       3080.565482\n",
+       "1808       2924.080468\n",
+       "1809       2910.836175\n",
+       "1810       2880.696526\n",
+       "1811       2936.298260\n",
        "\n",
        "[1812 rows x 1 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "liste_crypto_df['BTC']"
+    "liste_crypto_df['ETH']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "27a52374-f09e-42dc-85f6-824b57fcc4ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir le Dataset\n",
+    "taille = 150\n",
+    "\n",
+    "class CryptoDataset(Dataset):\n",
+    "    def __init__(self, dataframe):\n",
+    "        self.dataframe = dataframe\n",
+    "        self.features = \"Price\"\n",
+    "        self.targets = dataframe.values  # 'ETH' column as target variable\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dataframe) - (taille + 1)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        features = torch.tensor(self.dataframe.iloc[idx : idx + taille].values, dtype=torch.float32)\n",
+    "        target = torch.tensor(self.targets[idx + taille], dtype=torch.float32)\n",
+    "\n",
+    "        return features, target\n",
+    "\n",
+    "# Utilisation du dataset\n",
+    "crypto_dataset = CryptoDataset(liste_crypto_df['ETH'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "65c6b9d6-83a9-4203-9d72-807501809665",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1661\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(crypto_dataset))\n",
+    "\n",
+    "# Avant de passer les données à votre modèle, normalisez-les\n",
+    "mean = crypto_dataset.dataframe.mean()\n",
+    "std = crypto_dataset.dataframe.std()\n",
+    "\n",
+    "crypto_dataset.dataframe = (crypto_dataset.dataframe - mean) / std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "id": "3319e376-29d5-4bc7-8026-4cea607d9e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir le DataLoader\n",
+    "batch_size = 32  # Choisir la taille du lot en fonction de vos besoins\n",
+    "crypto_dataloader = DataLoader(crypto_dataset, \n",
+    "                               batch_size=batch_size, \n",
+    "                               shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "id": "6cb1502e-e8f6-444d-8275-41d8014c4d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CryptoPredict(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_stacked_layers):\n",
+    "        super(CryptoPredict, self).__init__()\n",
+    "\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_stacked_layers = num_stacked_layers\n",
+    "        \n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_stacked_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, 1)\n",
+    "        self.batch_norm = nn.BatchNorm1d(1)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batch_size = x.size(0)\n",
+    "        h0 = torch.zeros(self.num_stacked_layers, batch_size, self.hidden_size).to(x.device)\n",
+    "        c0 = torch.zeros(self.num_stacked_layers, batch_size, self.hidden_size).to(x.device)\n",
+    "\n",
+    "        out, _ = self.lstm(x, (h0, c0))\n",
+    "        out = self.fc(out[:, -1, :])\n",
+    "        \n",
+    "        return out\n",
+    "\n",
+    "# Usage of the model\n",
+    "input_size = 1\n",
+    "hidden_size = 40\n",
+    "num_stacked_layers = 1  # You may adjust this value\n",
+    "\n",
+    "model = CryptoPredict(input_size, hidden_size, num_stacked_layers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "92ca7fd4-67b2-49ab-b6eb-70c24b1f2023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criterion and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "cc918cce-5565-42da-aa94-d3a0b7362b64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/800, Loss: 2301140.2992412862\n",
+      "Epoch 2/800, Loss: 2295223.7459810697\n",
+      "Epoch 3/800, Loss: 2291310.5788010815\n",
+      "Epoch 4/800, Loss: 2288152.1503342846\n",
+      "Epoch 5/800, Loss: 2285239.8457594654\n",
+      "Epoch 6/800, Loss: 2282348.7649113582\n",
+      "Epoch 7/800, Loss: 2279524.7591458834\n",
+      "Epoch 8/800, Loss: 2276828.0467059794\n",
+      "Epoch 9/800, Loss: 2273951.452843299\n",
+      "Epoch 10/800, Loss: 2271153.3064434347\n",
+      "Epoch 11/800, Loss: 2268491.6288686898\n",
+      "Epoch 12/800, Loss: 2265885.2790527344\n",
+      "Epoch 13/800, Loss: 2263318.325063852\n",
+      "Epoch 14/800, Loss: 2260782.6066331128\n",
+      "Epoch 15/800, Loss: 2258273.0309213493\n",
+      "Epoch 16/800, Loss: 2255786.1378079928\n",
+      "Epoch 17/800, Loss: 2253319.4059213493\n",
+      "Epoch 18/800, Loss: 2250870.410888672\n",
+      "Epoch 19/800, Loss: 2248438.1301739034\n",
+      "Epoch 20/800, Loss: 2246021.049128606\n",
+      "Epoch 21/800, Loss: 2243618.1212252104\n",
+      "Epoch 22/800, Loss: 2241228.4814453125\n",
+      "Epoch 23/800, Loss: 2238851.3658259464\n",
+      "Epoch 24/800, Loss: 2236486.149104192\n",
+      "Epoch 25/800, Loss: 2234132.4513502857\n",
+      "Epoch 26/800, Loss: 2231789.6564847506\n",
+      "Epoch 27/800, Loss: 2229457.282273513\n",
+      "Epoch 28/800, Loss: 2227135.1904484676\n",
+      "Epoch 29/800, Loss: 2224822.8252093974\n",
+      "Epoch 30/800, Loss: 2222520.0111600435\n",
+      "Epoch 31/800, Loss: 2220226.4702477087\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[237], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m#print(\"output : \", outputs)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#print(\"labels : \", labels)\u001b[39;00m\n\u001b[1;32m     16\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(outputs, labels)\n\u001b[0;32m---> 17\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     18\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     23\u001b[0m running_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem()\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.11/site-packages/torch/_tensor.py:487\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    477\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    478\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    479\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    480\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    485\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    486\u001b[0m     )\n\u001b[0;32m--> 487\u001b[0m torch\u001b[38;5;241m.\u001b[39mautograd\u001b[38;5;241m.\u001b[39mbackward(\n\u001b[1;32m    488\u001b[0m     \u001b[38;5;28mself\u001b[39m, gradient, retain_graph, create_graph, inputs\u001b[38;5;241m=\u001b[39minputs\n\u001b[1;32m    489\u001b[0m )\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.11/site-packages/torch/autograd/__init__.py:200\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    195\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    197\u001b[0m \u001b[38;5;66;03m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[1;32m    198\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    199\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 200\u001b[0m Variable\u001b[38;5;241m.\u001b[39m_execution_engine\u001b[38;5;241m.\u001b[39mrun_backward(  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    201\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    202\u001b[0m     allow_unreachable\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, accumulate_grad\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Training loop\n",
+    "num_epoch = 800\n",
+    "\n",
+    "for epoch in range(num_epoch): \n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(crypto_dataloader, 0):\n",
+    "        inputs, labels = data\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "\n",
+    "        #print(\"output : \", outputs)\n",
+    "        #print(\"labels : \", labels)\n",
+    "        \n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "            \n",
+    "    print(f'Epoch {epoch + 1}/{num_epoch}, Loss: {running_loss / len(crypto_dataloader)}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a52374-f09e-42dc-85f6-824b57fcc4ff",
+   "id": "32085e1b-4d35-4c4e-bf33-b159fc2674f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf86dee4-418a-4d06-af35-7dff039f9832",
    "metadata": {},
    "outputs": [],
    "source": []
