--- a/data.ipynb
+++ b/data.ipynb
@@ -10,17 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "id": "9a0504d4-f359-4414-930b-31b5c79e3cc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-18 09:30:15.516485: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
+    "import numpy as np\n",
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -33,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "id": "2a8f5de6-173d-4f99-8185-871c9663b62f",
    "metadata": {},
    "outputs": [],
@@ -51,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "id": "616872ff-2023-449b-b446-c45f154118d7",
    "metadata": {},
    "outputs": [],
@@ -65,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "id": "35f8a4e3-a21a-4028-b2bc-c4905a6811a2",
    "metadata": {},
    "outputs": [
@@ -452,7 +467,7 @@
        "[1812 rows x 104 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "id": "2377abca-c9a9-4683-bc8e-429b4ccce292",
    "metadata": {},
    "outputs": [],
@@ -480,150 +495,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "2686a2ac-4948-427f-8303-abf4d57d272a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ETH / Price, USD</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>17.265684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>19.204561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>19.654703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>18.684225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>19.301111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1807</th>\n",
-       "      <td>3080.565482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1808</th>\n",
-       "      <td>2924.080468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1809</th>\n",
-       "      <td>2910.836175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1810</th>\n",
-       "      <td>2880.696526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1811</th>\n",
-       "      <td>2936.298260</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1812 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      ETH / Price, USD\n",
-       "0            17.265684\n",
-       "1            19.204561\n",
-       "2            19.654703\n",
-       "3            18.684225\n",
-       "4            19.301111\n",
-       "...                ...\n",
-       "1807       3080.565482\n",
-       "1808       2924.080468\n",
-       "1809       2910.836175\n",
-       "1810       2880.696526\n",
-       "1811       2936.298260\n",
-       "\n",
-       "[1812 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "liste_crypto_df['ETH']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 226,
-   "id": "27a52374-f09e-42dc-85f6-824b57fcc4ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Définir le Dataset\n",
-    "taille = 150\n",
-    "\n",
-    "class CryptoDataset(Dataset):\n",
-    "    def __init__(self, dataframe):\n",
-    "        self.dataframe = dataframe\n",
-    "        self.features = \"Price\"\n",
-    "        self.targets = dataframe.values  # 'ETH' column as target variable\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.dataframe) - (taille + 1)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        features = torch.tensor(self.dataframe.iloc[idx : idx + taille].values, dtype=torch.float32)\n",
-    "        target = torch.tensor(self.targets[idx + taille], dtype=torch.float32)\n",
-    "\n",
-    "        return features, target\n",
-    "\n",
-    "# Utilisation du dataset\n",
-    "crypto_dataset = CryptoDataset(liste_crypto_df['ETH'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 6,
    "id": "65c6b9d6-83a9-4203-9d72-807501809665",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1661\n"
+     "ename": "NameError",
+     "evalue": "name 'crypto_dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(crypto_dataset))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Avant de passer les données à votre modèle, normalisez-les\u001b[39;00m\n\u001b[1;32m      4\u001b[0m mean \u001b[38;5;241m=\u001b[39m crypto_dataset\u001b[38;5;241m.\u001b[39mdataframe\u001b[38;5;241m.\u001b[39mmean()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'crypto_dataset' is not defined"
      ]
     }
    ],
@@ -634,26 +518,40 @@
     "mean = crypto_dataset.dataframe.mean()\n",
     "std = crypto_dataset.dataframe.std()\n",
     "\n",
-    "crypto_dataset.dataframe = (crypto_dataset.dataframe - mean) / std"
+    "crypto_dataset.dataframe = (crypto_dataset.dataframe - mean) / std\n",
+    "\n",
+    "train_size = int(0.8 * len(crypto_dataset))  # Utilisation de 80% des données pour l'entraînement, ajustez si nécessaire\n",
+    "test_size = len(crypto_dataset) - train_size\n",
+    "\n",
+    "train_dataset, test_dataset = torch.utils.data.random_split(crypto_dataset, [train_size, test_size])\n",
+    "\n",
+    "# Vérifier les tailles des ensembles de données\n",
+    "print(\"Taille de l'ensemble d'entraînement :\", len(train_dataset))\n",
+    "print(\"Taille de l'ensemble de test :\", len(test_dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 12,
    "id": "3319e376-29d5-4bc7-8026-4cea607d9e41",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Définir le DataLoader\n",
-    "batch_size = 32  # Choisir la taille du lot en fonction de vos besoins\n",
-    "crypto_dataloader = DataLoader(crypto_dataset, \n",
+    "batch_size = 100  # Choisir la taille du lot en fonction de vos besoins\n",
+    "crypto_dataloader = DataLoader(train_dataset, \n",
+    "                               batch_size=batch_size, \n",
+    "                               shuffle=False)\n",
+    "\n",
+    "\n",
+    "crypto_dataloader_test = DataLoader(test_dataset, \n",
     "                               batch_size=batch_size, \n",
     "                               shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 13,
    "id": "6cb1502e-e8f6-444d-8275-41d8014c4d4f",
    "metadata": {},
    "outputs": [],
@@ -681,6 +579,7 @@
     "\n",
     "# Usage of the model\n",
     "input_size = 1\n",
+    "# Usage of the model\n",
     "hidden_size = 40\n",
     "num_stacked_layers = 1  # You may adjust this value\n",
     "\n",
@@ -785,17 +684,203 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff22719d-7c0a-444a-bc5e-48727443cd51",
+   "metadata": {},
+   "source": [
+    "### V2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "32085e1b-4d35-4c4e-bf33-b159fc2674f9",
+   "execution_count": 7,
+   "id": "c52a10dd-0f6f-4b3f-8bcb-f45aea49065d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "liste = liste_crypto_df['ETH'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e87adcc8-2b3b-4ecf-9527-4554fc21ee2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (1441, 10, 1)\n",
+      "X_test shape: (180, 10, 1)\n",
+      "y_train shape: (1441, 1)\n",
+      "y_test shape: (180, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split a univariate sequence into samples\n",
+    "def split_sequence(sequence, n_steps):\n",
+    "    X, y = list(), list()\n",
+    "    for i in range(len(sequence)):\n",
+    "        # find the end of this pattern\n",
+    "        end_ix = i + n_steps\n",
+    "        # check if we are beyond the sequence\n",
+    "        if end_ix > len(sequence)-1:\n",
+    "            break\n",
+    "        # gather input and output parts of the pattern\n",
+    "        seq_x, seq_y = sequence[i:end_ix], sequence[end_ix]\n",
+    "        X.append(seq_x)\n",
+    "        y.append(seq_y)\n",
+    "    return np.array(X), np.array(y)\n",
+    " \n",
+    "# define input sequence\n",
+    "raw_seq = liste\n",
+    "# choose a number of time steps\n",
+    "n_steps = 10\n",
+    "# split into samples\n",
+    "X, y = split_sequence(raw_seq, n_steps)\n",
+    "\n",
+    "# Supposons que X et y soient déjà définis à partir de la fonction split_sequence\n",
+    "\n",
+    "# Diviser les données en ensembles d'entraînement et de test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_test, X_dev, y_test, y_dev = train_test_split(X_test, y_test, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Afficher les dimensions des ensembles de données\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "print(\"y_test shape:\", y_test.shape)\n",
+    "\n",
+    "scaler_x = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "\n",
+    "# Normaliser les données d'entrée X_train et X_test\n",
+    "X_train = scaler_x.fit_transform(X_train.reshape(-1, 1)).reshape(X_train.shape)\n",
+    "X_test = scaler_x.transform(X_test.reshape(-1, 1)).reshape(X_test.shape)\n",
+    "X_dev = scaler_x.transform(X_dev.reshape(-1, 1)).reshape(X_dev.shape)\n",
+    "\n",
+    "# Normaliser les données de sortie y_train et y_test\n",
+    "y_train = scaler_y.fit_transform(y_train.reshape(-1, 1)).reshape(y_train.shape)\n",
+    "y_test = scaler_y.transform(y_test.reshape(-1, 1)).reshape(y_test.shape)\n",
+    "y_dev = scaler_y.transform(y_dev.reshape(-1, 1)).reshape(y_dev.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "49e343c8-8ef1-4e1c-923f-f1f8fa07c564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(X_train, y_train, X_test, y_test, sequence_length):\n",
+    "    \n",
+    "    # Définir le modèle\n",
+    "    model = Sequential()\n",
+    "    model.add(LSTM(70, activation='relu', input_shape=(sequence_length, 1)))  # Couche LSTM avec return_sequences=True\n",
+    "    model.add(Dense(1))  # Couche Dense finale\n",
+    "    \n",
+    "    # Compiler le modèle\n",
+    "    model.compile(optimizer='adam', loss='mse')\n",
+    "\n",
+    "    # Entraîner le modèle\n",
+    "    history = model.fit(X_train, y_train, epochs=5, batch_size=64, validation_data=(X_test, y_test), verbose=1)\n",
+    "\n",
+    "    return model, history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0ffaa7e5-37b7-43d4-affa-95bdf0e6343c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "23/23 [==============================] - 2s 46ms/step - loss: 0.5693 - val_loss: 0.0989\n",
+      "Epoch 2/5\n",
+      "23/23 [==============================] - 1s 28ms/step - loss: 0.0652 - val_loss: 0.0475\n",
+      "Epoch 3/5\n",
+      "23/23 [==============================] - 1s 24ms/step - loss: 0.0325 - val_loss: 0.0168\n",
+      "Epoch 4/5\n",
+      "23/23 [==============================] - 1s 21ms/step - loss: 0.0190 - val_loss: 0.0119\n",
+      "Epoch 5/5\n",
+      "23/23 [==============================] - 1s 23ms/step - loss: 0.0109 - val_loss: 0.0060\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_test, history = train(X_train, y_train, X_dev, y_dev, n_steps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e8e7e2ab-978e-4fd7-a03a-4896cfe6045a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.21048146]\n",
+      " [-0.19669718]\n",
+      " [-0.17792214]\n",
+      " [-0.12326292]\n",
+      " [-0.20246965]\n",
+      " [-0.16109757]\n",
+      " [-0.17238114]\n",
+      " [-0.14293881]\n",
+      " [-0.13788614]\n",
+      " [-0.15648613]]   :   [-0.160511]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 8\n",
+    "\n",
+    "test_prediction = X_test[n]\n",
+    "value = y_test[n]\n",
+    "\n",
+    "print(test_prediction, \"  :  \", value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bc54d871-dedd-4519-8fd0-b7b7926cf46c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.037745673\n",
+      "[[899.45215]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "yhat = model_test.predict(test_prediction, verbose=0)\n",
+    "\n",
+    "average_prediction = np.mean(yhat)\n",
+    "\n",
+    "print(average_prediction)\n",
+    "\n",
+    "denormalized_prediction = scaler_y.inverse_transform(average_prediction.reshape(-1, 1))\n",
+    "\n",
+    "print(denormalized_prediction)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf86dee4-418a-4d06-af35-7dff039f9832",
+   "id": "b9f4b979-a541-461d-b3db-d368dec661bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -817,7 +902,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
